fix: add border-radius: inherit; to fix problem on Safari

--- a/src/components/Scanner.css
+++ b/src/components/Scanner.css
@@ -21,12 +21,14 @@
   position: absolute;
   top: 0;
   left: 0;
-  object-fit: cover;
 
   width: 100%;
   height: 100%;
 
+  border-radius: inherit;
+
   outline: none;
+  object-fit: cover;
 }
 
 .scanner__canvas {
